addeed lat and lon in find doctors ap
